--- a/Externalpage1.css
+++ b/Externalpage1.css
@@ -19,6 +19,7 @@ h1 {
     
 
 }
+
 h5 {
     text-align: right;
 }
@@ -32,6 +33,24 @@ img {
     margin-right:auto;
     filter:drop-shadow(0px 10px 5px black);
 }
+
+.dunes {
+    height:880px;
+}
+
+
+.lettinggo{
+    height:1000px;
+}
+
+.corrupted{
+height: 1050px;
+}
+
+.method{
+height: 700px;
+}
+
 
 h2 {
     text-align: center;
