--- a/Externalpage1.css
+++ b/Externalpage1.css
@@ -32,24 +32,10 @@ img {
     margin-left:auto;
     margin-right:auto;
     filter:drop-shadow(0px 10px 5px black);
+    border-radius: 8px;
+    width: 700px;
 }
 
-.dunes {
-    height:880px;
-}
-
-
-.lettinggo{
-    height:1000px;
-}
-
-.corrupted{
-height: 1050px;
-}
-
-.method{
-height: 700px;
-}
 
 
 h2 {
