--- a/external.css
+++ b/external.css
@@ -24,10 +24,11 @@ img {
     margin-left: auto;
     margin-right: auto;
     filter:drop-shadow(0px 10px 5px black);
+    border-radius: 50%;
 }
 h3{
     display: block;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 15%;
+    margin-right: 15%;
     text-align: center;
 }
